Convert ChooseCredentialType-component to PersonalComponent
+ improve 'switch'-logic to be more human-readable

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -3,7 +3,8 @@
     {{ 'personal.choose-credential-type.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
-      <ion-radio-group [(ngModel)}]="credentialTypeChoice" (ionChange)="changeCredentialType($event,1)"
+      <ion-radio-group [(ngModel)}]="credentialTypeChoice"
+                       (ionChange)="changeCredentialType($event, 'apply-to-program')"
       >
         <ion-item *ngFor="let credentialType of credentialTypes"
                   color="light"
@@ -14,22 +15,35 @@
           <ion-radio value="{{ credentialType.id }}"></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <ion-button [hidden]="!credentialTypeChoice" (click)="submitCredentialType()">Submit</ion-button>
+      <p class="ion-margin-top">
+        <ion-button [hidden]="!credentialTypeChoice"
+                    (click)="submitCredentialType()"
+                    size="block"
+        >{{ 'shared.submit-button'|translate }}</ion-button>
+      </p>
   </dialogue-turn>
   <dialogue-turn [hidden]="!programChosen">
     {{ 'personal.choose-credential-type.conclusion-program'|translate }}
   </dialogue-turn>
-  <dialogue-turn actor="self" [hidden]="!programChosen">
+  <dialogue-turn actor="self"
+                 [hidden]="!programChosen"
+  >
       <ion-button>{{ 'personal.choose-credential-type.info-digital-id'|translate }}</ion-button>
-      <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew" (ionChange)="changeCredentialType($event,2)">
+      <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew"
+                       (ionChange)="changeCredentialType($event, 'create-id')"
+      >
         <ion-item color="light"
                   class="ion-no-padding ion-text-wrap"
         >
           <ion-label>{{ 'personal.choose-credential-type.option2'|translate }}</ion-label>
-          <ion-radio value="2"></ion-radio>
+          <ion-radio value="create-id"></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <ion-button [hidden]="!credentialTypeChoiceNew"  (click)="submitCredentialTypeNew()">{{ 'shared.submit-button'|translate }}</ion-button>
+      <p class="ion-margin-top">
+        <ion-button [hidden]="!credentialTypeChoiceNew"
+                    (click)="submitCredentialTypeNew()"
+                    size="block"
+        >{{ 'shared.submit-button'|translate }}</ion-button>
+      </p>
   </dialogue-turn>
 </section>
-   
