--- a/interfaces/AW-App/src/app/scan-qr/scan-qr.page.html
+++ b/interfaces/AW-App/src/app/scan-qr/scan-qr.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header style="background: white">
   <ion-buttons end>
     <ion-button (click)="closeModal()">
       <ion-icon name="close"></ion-icon>
@@ -7,17 +7,17 @@
 </ion-header>
   
 <ion-content padding style="background: transparent!important">
-  <ion-fab bottom right margin style="margin-bottom: 15%;">
-    <button ion-fab>
+  <ion-fab vertical="bottom" horizontal="end" margin style="margin-bottom: 15%;">
+    <ion-fab-button>
       <ion-icon name="md-options"></ion-icon>
-    </button>
+    </ion-fab-button>
     <ion-fab-list side="top">
-      <button (click)="toggleFlashLight()" ion-fab>
+      <ion-fab-button (click)="toggleFlashLight()">
         <ion-icon name="flash"></ion-icon>
-      </button>
-      <button ion-fab (click)="toggleCamera()">
+      </ion-fab-button>
+      <ion-fab-button (click)="toggleCamera()">
         <ion-icon name="reverse-camera"></ion-icon>
-      </button>
+      </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
   <div center text-center>
