AB#548 change-password option disabled

--- a/interfaces/AW-App/src/app/personal-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/personal-components/main-menu/main-menu.component.html
@@ -8,6 +8,7 @@
       <ion-item *ngFor="let option of menuOptions"
                 color="light"
                 class="ion-no-padding ion-text-wrap"
+                [disabled]="option.disabled"
       >
         <ion-label>{{ option.option }}</ion-label>
         <ion-radio value="{{ option.id }}"></ion-radio>
