Add global style overrides for user-input elements

--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -21,3 +21,9 @@
   left: 0;
   right: 0;
 }
+
+// Override default styles to emphasize where to input
+ion-input,
+ion-textarea {
+  border: 1px solid currentColor;
+}
