Convert CreatePassword-component to PersonalComponent
+ add extra emphasis to the confirmation step

--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -2,18 +2,47 @@
     <dialogue-turn>
       {{ 'personal.create-password.introduction'|translate }}
     </dialogue-turn>
-    <dialogue-turn actor="self">
+    <dialogue-turn isConnected="true">
       {{ 'personal.create-password.step1'|translate }}
-      <br>
-      <ion-button>{{ 'personal.create-password.info-password'|translate }}</ion-button>
+    </dialogue-turn>
+    <dialogue-turn actor="self">
+      <p>
+        <ion-button>{{ 'personal.create-password.info-password'|translate }}</ion-button>
+      </p>
       <form (ngSubmit)="submitPassword(create,confirm)">
-        <ion-input type="password" [placeholder]="createPasswordPlaceholder" name="create" [(ngModel)]="create" ngDefaultControl></ion-input>
-        <ion-input type="password" [placeholder]="confirmPasswordPlaceholder" name="confirm" [(ngModel)]="confirm" ngDefaultControl></ion-input>
-        <ion-button [hidden]="!create || !confirm" type="submit">{{ 'personal.create-password.submit-password'|translate }}</ion-button>
+        <div class="ion-margin-bottom">
+          <ion-label>{{ 'personal.create-password.create-password'|translate }}</ion-label>
+          <ion-input type="password"
+                     name="create"
+                     [(ngModel)]="create"
+                     ngDefaultControl
+                     autocomplete="new-password"
+          ></ion-input>
+        </div>
+        <div class="ion-margin-top">
+          <ion-button [hidden]="!create || initialInput"
+                      (click)="initialInput=true;"
+                      type="button"
+          >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
+        </div>
+        <div *ngIf="initialInput">
+          <div>
+            <ion-label>{{ 'personal.create-password.confirm-password'|translate }}</ion-label>
+            <ion-input type="password"
+                       name="confirm"
+                       [(ngModel)]="confirm"
+                       ngDefaultControl
+            ></ion-input>
+          </div>
+          <div class="ion-margin-top">
+            <ion-button [hidden]="!create || !confirm"
+                        type="submit"
+            >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
+          </div>
+        </div>
       </form>
     </dialogue-turn>
     <dialogue-turn [hidden]="!passwordCreated">
       {{ 'personal.create-password.conclusion'|translate }}
     </dialogue-turn>
   </section>
-     
