Convert IdentityForn-component into PersonalComponent

--- a/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
+++ b/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
@@ -2,18 +2,40 @@
   <dialogue-turn>
     {{ 'personal.identity-form.introduction'|translate }}
   </dialogue-turn>
-  <dialogue-turn actor="self">
+  <dialogue-turn isConnected="true">
     {{ 'personal.identity-form.step2'|translate }}
-    <br>
-    <ion-button>{{ 'personal.identity-form.info-button'|translate }}</ion-button>
+  </dialogue-turn>
+  <dialogue-turn actor="self">
+    <p>
+      <ion-button>{{ 'personal.identity-form.info-button'|translate }}</ion-button>
+    </p>
     <form (ngSubmit)="submitIdentityForm(name,dob)">
-      <ion-input type="text" [placeholder]="namePlaceholder" name="name" [(ngModel)]="name" ngDefaultControl></ion-input>
-      <ion-input type="date" [placeholder]="dobPlaceholder" name="dob" [(ngModel)]="dob" ngDefaultControl></ion-input>
-      <ion-button [hidden]="!name || !dob" type="submit">{{ 'personal.identity-form.submit-button'|translate }}</ion-button>
+      <div class="ion-margin-top">
+        <ion-label>{{ 'personal.identity-form.name-label'|translate }}</ion-label>
+        <ion-input type="text"
+                   name="name"
+                   [(ngModel)]="name"
+                   ngDefaultControl
+        ></ion-input>
+      </div>
+      <div class="ion-margin-top">
+        <ion-label>{{ 'personal.identity-form.dob-label'|translate }}</ion-label>
+        <ion-input type="date"
+                   name="dob"
+                   placeholder="{{ 'personal.identity-form.dob-format' }}"
+                   [(ngModel)]="dob"
+                   ngDefaultControl
+        ></ion-input>
+      </div>
+      <div class="ion-margin-top">
+        <ion-button [hidden]="!name || !dob"
+                    type="submit"
+                    size="block"
+        >{{ 'personal.identity-form.submit-button'|translate }}</ion-button>
+      </div>
     </form>
   </dialogue-turn>
   <dialogue-turn [hidden]="!identitySubmitted">
     {{ 'personal.identity-form.conclusion'|translate }}
   </dialogue-turn>
 </section>
-     
