Convert SelectProgram-component to PersonalComponent
+ align similar components

--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -4,8 +4,10 @@
   <dialogue-turn>
     {{ 'personal.select-country.introduction'|translate }}
   </dialogue-turn>
-  <dialogue-turn actor="self">
+  <dialogue-turn isConnected="true">
     {{ 'personal.select-country.step3'|translate }}
+  </dialogue-turn>
+  <dialogue-turn actor="self">
     <ion-radio-group (ionChange)="changeCountry($event)"
     >
       <ion-item *ngFor="let country of countries"
