Add spacer-element, to always force scrolling behaviour

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -15,4 +15,6 @@
 
   <div #conversationContainer></div>
 
+  <!-- Make room to always be able to scroll -->
+  <div id="scroll-space-placeholder" style="height: 50vh;"></div>
 </ion-content>
