Make "select-language" always connected (for now)

--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -1,5 +1,5 @@
 <section #selectLanguage>
-  <dialogue-turn>
+  <dialogue-turn isConnected="true">
     {{ 'personal.select-language.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
