AB#605 next-conversation-component implemented

--- a/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
@@ -5,5 +5,8 @@
   <dialogue-turn actor="self">
     <ion-button (click)="scanQrCode()">{{ 'personal.scan-qr.scan-button'|translate }}</ion-button>
   </dialogue-turn>
+  <dialogue-turn [hidden]="!did">
+    {{ 'personal.scan-qr.conclusion'|translate }} {{did}}.
+  </dialogue-turn>
 </section>
      
