--- a/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
+++ b/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
@@ -35,6 +35,7 @@
         <ion-label>{{appointment.did}}</ion-label>
       </ion-item>
     </ion-list>
+    <ion-button (click)="backMainMenu()">{{ 'personal.view-appointments.main-menu'|translate }}</ion-button>
   </dialogue-turn>
 </section>
    
