Align content + "more info"-buttons with wireframes

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -23,12 +23,20 @@
       </p>
   </dialogue-turn>
   <dialogue-turn [hidden]="!programChosen">
-    {{ 'personal.choose-credential-type.conclusion-program'|translate }}
+    <p>
+      {{ 'personal.choose-credential-type.conclusion-program'|translate }}
+    </p>
+    <p>
+      <ion-button type="button" size="small">
+        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+        {{ 'personal.choose-credential-type.more-info-digital-id'|translate }}
+      </ion-button>
+    </p>
+
   </dialogue-turn>
   <dialogue-turn actor="self"
                  [hidden]="!programChosen"
   >
-      <ion-button>{{ 'personal.choose-credential-type.info-digital-id'|translate }}</ion-button>
       <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew"
                        (ionChange)="changeCredentialType($event, 'create-id')"
       >
