--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -1,14 +1,21 @@
 <section #createPassword>
     <dialogue-turn>
-      {{ 'personal.create-password.introduction'|translate }}
+      <p>
+        {{ 'personal.create-password.introduction'|translate }}
+      </p>
     </dialogue-turn>
     <dialogue-turn isConnected="true">
-      {{ 'personal.create-password.step1'|translate }}
+      <p>
+        {{ 'personal.create-password.step1'|translate }}
+      </p>
+      <p>
+        <ion-button type="button" size="small">
+          <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+          {{ 'personal.create-password.more-info-password'|translate }}
+        </ion-button>
+      </p>
     </dialogue-turn>
     <dialogue-turn actor="self">
-      <p>
-        <ion-button>{{ 'personal.create-password.info-password'|translate }}</ion-button>
-      </p>
       <form (ngSubmit)="submitPassword(create,confirm)">
         <div class="ion-margin-bottom">
           <ion-label>{{ 'personal.create-password.create-password'|translate }}</ion-label>
