--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -1,14 +1,17 @@
 <section>
   <dialogue-turn actor="Dorcas">
     <p>
-      We have received your request to apply for <strong>{{ programTitle }}</strong>.<br>
-      To make sure you get the best possible help, please answer the following questions.
+      <span [innerHTML]="introductionText"></span><br>
+      {{ 'personal.enroll-in-program.introduction-questions'|translate }}
+    </p>
+    <p>
+      <ion-button type="button" size="small">
+        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+        {{ 'personal.enroll-in-program.more-info-questions'|translate }}
+      </ion-button>
     </p>
   </dialogue-turn>
-  <dialogue-turn actor="self" [hidden]="!wantsToEnrol">
-    <p>
-      <ion-button>More about the questions</ion-button>
-    </p>
+  <dialogue-turn actor="self">
     <ul class="ion-no-padding">
       <li ion-item *ngFor="let question of questions">
         <code>{{ question.id }}: {{ question.code }}</code><br>
@@ -33,11 +36,44 @@
         </div>
       </li>
     </ul>
+    <p>
+      <ion-button type="submit"
+                  (click)="submit()"
+                  size="block"
+      >
+        {{ 'personal.enroll-in-program.submit'|translate }}
+      </ion-button>
+    </p>
+
+  </dialogue-turn>
+  <dialogue-turn [hidden]="!hasAnswered">
+    <p>
+      {{ 'personal.enroll-in-program.please-confirm'|translate }}
+    </p>
+  </dialogue-turn>
+  <dialogue-turn actor="self" [hidden]="!hasAnswered">
 
     <p class="ion-margin-top">
-      <ion-button (click)="enrolInProgram()"
+      <ion-button type="button" size="small">
+        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+        {{ 'personal.enroll-in-program.more-info-share'|translate }}
+      </ion-button>
+    </p>
+
+    <p class="ion-margin-top">
+      <ion-button type="submit"
+                  (click)="submitConfirm()"
                   size="block"
-      >{{ 'shared.submit-button'|translate }}</ion-button>
+      >
+        {{ 'personal.enroll-in-program.submit-confirm'|translate }}
+      </ion-button>
+      <ion-button type="button"
+                  (click)="change()"
+                  size="block"
+                  fill="outline"
+      >
+        {{ 'personal.enroll-in-program.change'|translate }}
+      </ion-button>
     </p>
   </dialogue-turn>
 </section>
