Generate speech-bubbles per question + store answers internally

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -11,31 +11,35 @@
       </ion-button>
     </p>
   </dialogue-turn>
-  <dialogue-turn actor="self">
-    <ul class="ion-no-padding">
-      <li ion-item *ngFor="let question of questions">
-        <code>{{ question.id }}: {{ question.code }}</code><br>
-
-        <ion-label>
-          {{ question.label }}
-        </ion-label>
-        <div *ngIf="question.type === 'numeric'">
-          <ion-input type="text"
-                     [name]="question.code"
-          ></ion-input>
-        </div>
-        <div *ngIf="question.type === 'dropdown'">
-          <ion-radio-group [name]="question.code">
+  <dialogue-turn actor="self"
+                 *ngFor="let question of questions; let i=index"
+                [isConnected]="i > 0"
+  >
+    <ion-label>
+      {{ question.label }}
+    </ion-label>
+    <div [ngSwitch]="question.answerType">
+      <div *ngSwitchCase="answerTypes.Enum">
+        <ion-radio-group [name]="question.code"
+                         (ionChange)="changeAnswers($event)"
+        >
           <ion-item *ngFor="let option of question.options"
                     color="light"
           >
-              <ion-label>{{ option.label }}</ion-label>
-              <ion-radio [value]="option.id"></ion-radio>
-            </ion-item>
-          </ion-radio-group>
-        </div>
-      </li>
-    </ul>
+            <ion-label>{{ option.label }}</ion-label>
+            <ion-radio [value]="option.value"></ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </div>
+      <div *ngSwitchDefault>
+        <ion-input type="text"
+                   [name]="question.code"
+                   (change)="changeAnswers($event)"
+        ></ion-input>
+      </div>
+    </div>
+  </dialogue-turn>
+  <dialogue-turn actor="self" isConnected="true">
     <p>
       <ion-button type="submit"
                   (click)="submit()"
@@ -46,12 +50,18 @@
     </p>
 
   </dialogue-turn>
-  <dialogue-turn [actor]="program?.ngo" [hidden]="!hasAnswered">
+  <dialogue-turn [actor]="program?.ngo" *ngIf="hasAnswered">
     <p>
       {{ 'personal.enroll-in-program.please-confirm'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn actor="self" [hidden]="!hasAnswered">
+  <dialogue-turn actor="self" *ngIf="hasAnswered">
+    <ul class="ion-no-padding">
+      <li *ngFor="let question of questions">
+        {{ question.label }}<br>
+        <strong>{{ answers[question.code]?.label }}</strong>
+      </li>
+    </ul>
 
     <p class="ion-margin-top">
       <ion-button type="button" size="small">
